chore: update `tsconfig.json` to use `[node]` for the `types` property
- Change the `types` property value from `[vite/client]` to `[node]` in `tsconfig.json`

Signed-off-by: stevecyj <ycsteven.tsao@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["vite/client"],
+    "types": ["node"],
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */
   },
